--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardhat-local-hedera",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Hardhat plugin for local-hedera",
   "homepage": "https://github.com/LimeChain/hardhat-local-hedera",
   "repository": "github:LimeChain/hardhat-local-hedera",
@@ -18,11 +18,10 @@
   "scripts": {
     "lint": "yarn node_modules/.bin/prettier --check && yarn eslint",
     "lint:fix": "yarn node_modules/.bin/prettier --write && yarn eslint --fix",
-    "eslint": "node_modules/.bin/eslint 'src/**/*.ts' 'test/**/*.ts'",
+    "eslint": "node_modules/.bin/eslint 'src/**/*.ts'",
     "prettier": "node_modules/.bin/prettier \\\"**/*.{js,md,json}\\\"",
-    "test": "node_modules/.bin/mocha --recursive \\\"test/**/*.ts\\\" --exit",
     "build": "npm run clean && node_modules/.bin/tsc --build .",
-    "clean": "node_modules/.bin/rimraf dist internal types *.{d.ts,js}{,.map} build-test tsconfig.tsbuildinfo"
+    "clean": "node_modules/.bin/rimraf dist internal types *.{d.ts,js}{,.map} tsconfig.tsbuildinfo"
   },
   "files": [
     "dist/src/",
